package nl.saxion;

public class Facade {
}
