package nl.saxion.Models.printer.printerTypes;

public enum FilamentType {
    PLA, PETG, ABS
}
