package nl.saxion.managers;

import nl.saxion.Models.Print;

import java.util.ArrayList;

public class PrintManager {
    private ArrayList<Print> prints;

    public PrintManager() {
        this.prints = prints = new ArrayList<Print>();
    }

    public void addPrintTask(){}

    public Print findPrint(String print){
        return null;
    }

    public void addPrint(){}

    public static void readPrintsFromFile(String file){}
}

