package nl.saxion.managers;

import nl.saxion.Models.Spool;

import java.util.ArrayList;

public class SpoolManager {
    private ArrayList<Spool> spools;

    public SpoolManager() {
        this.spools = new ArrayList<>();
    }

    public void addSpool(Spool spool){}
    public void gerSpool(){}
    public static void readSpoolsFromFile(String file){}

}
