@startuml
'https://plantuml.com/sequence-diagram

class Main{
    + main(String[]): void
    - stringInput(): String
    - menuChoice(int): int
    - numberInput(int, int): int
    - run(String[]): void
    - menu(): void
    - numberInput(): int
    }

class Facade{
    +SpoolManager
    +PrintManager
    +PrinterManager
    - startPrintQueue(): void
    - addNewPrintTask(): void
    - showSpools(): void
    - registerPrintCompletion(): void
    - exit(): void
    - showPrinters(): void
    - changePrintStrategy(): void
    - registerPrinterFailure(): void
    - showPrints(): void
    - showPendingPrintTasks(): void
}
class PrintManager{
 + PrintManager()

      - PrintTask : List<PrintTask>
      + addPrintTask(String, List<String> , FilamentType) : void

      - readPrintsFromFile(String): void
      + findPrint(String) : Print
      + addPrint(String,int,int,int,ArrayList<Double>,int) : void
      + prints : List<Print>

}
class SpoolManager{
       + SpoolManager()

    - readSpoolsFromFile(String): void
      - spools : List<Spool>
        + getSpoolByID(int) : Spool
          + addSpool(Spool) : void
              + spools : List<Spool>


}
class PrinterManager{
    + PrinterManager()
    - readPrintersFromFile(String): void
    - Map<Printer , ArrayList<PrintTask>> printers
    + selectPrintTask(Printer) : void
    + registerPrinterFailure(int) : void
    + addPrinter(int, int, String, String, int, int, int, int,) : void
    + getPrinterCurrentTask(Printer) : PrintTask

    + printError(String) : void
    + registerCompletion(int) : void

  + startInitialQueue() : void
  + findPrinter(int) : Printer
--
  + getPendingPrintTasks : List<PrintTask>
  + getPrinters : List<Printer>
}
abstract class Printer{
+ containsSpool(List<Spool>, String) : boolean
}
class Spool{}
class Print{}
class StandardFDM{}
class MultiColor{}
class PrintTask{}
enum FilamentType{}


Main -down-> Facade

Facade -down-> SpoolManager
SpoolManager -down-> Spool
Spool <-- FilamentType
Spool --* Printer

Facade -down-> PrintManager
PrintManager -down-> Print
Print -down-> PrintTask
PrintTask *-- PrinterManager

Facade -down-> PrinterManager
PrinterManager -down-> Printer
Printer <|-- StandardFDM
Printer <|-- MultiColor




@enduml